--- a/css/styles.css
+++ b/css/styles.css
@@ -535,3 +535,271 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-icon {
     fill: #f4f4fd;
 }
+
+.footer-paragraph-subscribe {
+    font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+
+}
+
+.subscribe-btn {
+    border-radius: 4px;
+        padding: 8px 24px;
+        min-width: 165px;
+        height: 40px;
+        background-color: #4d5ae5;
+}
+
+.subscribe-cont {
+    display: flex;
+}
+
+   /* Modal */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+ visibility: hidden;
+ opacity: 0;
+ pointer-events: none;
+ transition: visibility 250ms, cubic-bezier(0.4, 0, 0.2, 1),
+opacity 250ms,
+    cubic-bezier(0.4, 0, 0.2, 1),
+pointer-events 250ms,
+    cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+    visibility: visible;
+    pointer-events: auto;
+    opacity: 1;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border-radius: 4px;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
+    background-color: #fcfcfc;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+padding: 72px 24px 0px;
+}
+
+
+.close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+border-radius: 100%;
+    background-color: #e7e9fc;
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.1);
+    width: 24px;
+    height: 24px;
+    line-height: 0;
+    padding: 0;
+    transition: backround-color 250ms, cubic-bezier(0.4, 0, 0.2, 1),
+            opacity 250ms;
+            border: none;
+}
+
+.close-svg {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    right: 8px;
+bottom: 8px;
+    fill: #2e2f42;
+ 
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    background-color: #404bbf;
+   border: 0;
+}
+
+.close-svg:hover,
+.close-svg:focus {
+    fill: #fff;
+}
+
+.modal-text {
+    font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+        margin-bottom: 16px;
+}
+
+
+.form-wrapper-cont {
+    margin-bottom: 8px;
+}
+
+.modal-con-checkbox {
+    margin-bottom: 24px;
+}
+
+.modal-form-label {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        display: block;
+        margin-bottom: 4px;
+}
+
+
+.modal-cont {
+    position: relative;
+}
+
+
+.modal-input {
+    height: 40px;
+    width: 100%;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        padding-left: 38px;
+        outline: none;
+        transition: border 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-input:focus {
+   border: 1px solid #4d5ae5;
+ 
+}
+
+
+.modal-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus+.modal-icon {
+fill: #4d5ae5;
+}
+
+.form-wrapper-cont-coment {
+ font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        margin-bottom: 16px;
+    }
+
+
+.modal-form-label-coment {
+   display: block;
+   margin-bottom: 4px;
+
+}
+
+
+
+.modal-textarea {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        width: 360px;
+        height: 120px;
+        resize: none;
+        transition: border 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+        display: block;
+}
+    
+
+
+.modal-textarea:focus {
+border: 1px solid #4d5ae5;
+
+        }
+
+.modal-textarea::placeholder {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: rgba(46, 47, 66, 0.4);
+        padding-left: 16px;
+        padding-top: 8px;
+}
+
+
+.custom-checkbox {
+   border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.4); 
+width: 16px;
+height: 16px;
+display: inline-flex;
+justify-content: center;
+align-items: center;
+margin-right: 8px;
+}
+
+.icon-vector {
+    fill: #f4f4fd;;
+}
+
+.input-checkbox:checked + .label-checkbox > .custom-checkbox {
+border: transparent;
+background-color: #404bbf;
+}
+
+
+.label-checkbox {
+    cursor: pointer;
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+}
+
+.modal-span {
+    line-height: 1.33333;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+        color: #4d5ae5;
+}
+
+.send-btn {
+font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    border-radius: 4px;
+    border: none;
+        padding: 16px 32px;
+        min-width: 169px;
+        height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+            background: #4d5ae5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        
+}
