--- a/css/styles.css
+++ b/css/styles.css
@@ -571,11 +571,7 @@ color: #fff;
  visibility: hidden;
  opacity: 0;
  pointer-events: none;
- transition: visibility 250ms, cubic-bezier(0.4, 0, 0.2, 1),
-opacity 250ms,
-    cubic-bezier(0.4, 0, 0.2, 1),
-pointer-events 250ms,
-    cubic-bezier(0.4, 0, 0.2, 1);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -594,15 +590,17 @@ pointer-events 250ms,
     min-height: 584px;
     background-color: #fcfcfc;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-padding: 72px 24px 0px;
+padding: 72px 24px 24px 24px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 .close-btn {
     position: absolute;
+    display: flex;
     top: 24px;
     right: 24px;
-border-radius: 100%;
+border-radius: 50%;
     background-color: #e7e9fc;
     stroke-width: 1px;
     stroke: rgba(0, 0, 0, 0.1);
@@ -610,9 +608,11 @@ border-radius: 100%;
     height: 24px;
     line-height: 0;
     padding: 0;
-    transition: backround-color 250ms, cubic-bezier(0.4, 0, 0.2, 1),
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
             opacity 250ms;
-            border: none;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            align-items: center;
+            justify-content: center;
 }
 
 .close-svg {
@@ -622,6 +622,7 @@ border-radius: 100%;
     right: 8px;
 bottom: 8px;
     fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  
 }
 
@@ -629,6 +630,7 @@ bottom: 8px;
 .close-btn:focus {
     background-color: #404bbf;
    border: 0;
+   
 }
 
 .close-svg:hover,
@@ -659,7 +661,7 @@ bottom: 8px;
 .modal-form-label {
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
+    line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
         display: block;
@@ -678,9 +680,9 @@ bottom: 8px;
     border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
         padding-left: 38px;
-        outline: none;
-        transition: border 250ms, cubic-bezier(0.4, 0, 0.2, 1);
-
+background-color: transparent;
+outline: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -694,7 +696,7 @@ bottom: 8px;
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
-    transition: fill 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus+.modal-icon {
@@ -727,6 +729,13 @@ fill: #4d5ae5;
         resize: none;
         transition: border 250ms, cubic-bezier(0.4, 0, 0.2, 1);
         display: block;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: rgba(46, 47, 66, 0.4);
+        background-color: transparent;
+        padding: 8px 16px;
+        outline: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
     
 
@@ -756,15 +765,16 @@ display: inline-flex;
 justify-content: center;
 align-items: center;
 margin-right: 8px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ fill: transparent;
 }
 
-.icon-vector {
-    fill: #f4f4fd;;
-}
+
 
 .input-checkbox:checked + .label-checkbox > .custom-checkbox {
 border: transparent;
 background-color: #404bbf;
+fill: #F4F4FD;;
 }
 
 
@@ -772,7 +782,7 @@ background-color: #404bbf;
     cursor: pointer;
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
+    line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
 }
@@ -798,8 +808,8 @@ font-weight: 500;
         height: 56px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
             background: #4d5ae5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            display: block;
+            margin: auto;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
 }
