--- a/css/styles.css
+++ b/css/styles.css
@@ -630,6 +630,7 @@ bottom: 8px;
 .close-btn:focus {
     background-color: #404bbf;
    border: 0;
+fill: #ffffff
    
 }
 
@@ -713,11 +714,7 @@ fill: #4d5ae5;
     }
 
 
-.modal-form-label-coment {
-   display: block;
-   margin-bottom: 4px;
 
-}
 
 
 
