--- a/css/styles.css
+++ b/css/styles.css
@@ -532,6 +532,11 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
+.main-subscribe-cont {
+display: flex;
+}
+
+
 .footer-icon {
     fill: #f4f4fd;
 }
@@ -542,19 +547,65 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #fff;
+margin-bottom: 16px;
+}
 
+.form-footer {
+    display: flex;
+    gap: 24px; 
+}
+
+.form-footer-input {
+border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    background-color: transparent;
+    font-size: 12px;
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: #fff;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.form-footer-input::placeholder {
+color:#ffffff;
+}
+
+
+.subscribe-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+border-radius: 4px;
+    padding: 8px 24px;
+    min-width: 165px;
+    height: 40px;
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        text-align: center;
+        color: #fff;
+        cursor: pointer;
+        background-color: #4d5ae5;
+        border: none;
 }
 
 .subscribe-btn {
-    border-radius: 4px;
-        padding: 8px 24px;
-        min-width: 165px;
-        height: 40px;
-        background-color: #4d5ae5;
+    margin-left: 16px;
+
 }
 
 .subscribe-cont {
     display: flex;
+}
+
+.footer-svg-sbscrb {
+    fill: white;
+   margin-left: 16px;
 }
 
    /* Modal */
