--- a/css/styles.css
+++ b/css/styles.css
@@ -534,6 +534,8 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .main-subscribe-cont {
 display: flex;
+flex-direction: column;
+padding-left: 80px;
 }
 
 
@@ -568,6 +570,7 @@ border: 1px solid #fff;
         letter-spacing: 0.04em;
         color: #fff;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        padding-left: 16px;
 }
 
 .form-footer-input::placeholder {
